<resources>
    <string name="app_name">SoulSync</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile\n</string>
    <string name="title_daily_therapy">Daily Therapy</string>
    <string name="title_music_relax">Music Relax</string>
    <string name="title_profile">Profile</string>
    <string name="selamat_datang">Selamat Datang...</string>
    <string name="deskripsi_selamat_datang">Bahwa sesungguhnya kekayaan itu bukan terletak pada banyaknya harta benda, melainkan pada hati dan ketenangan jiwa.</string>
    <string name="mulai">Mulai</string>
    <string name="illustration">illustration\n</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">Belum punya akun? Daftar Akun</string>
    <string name="name">Name</string>
    <string name="signup">Sign Up</string>
    <string name="search_button_desc">search</string>
    <string name="back_button_desc">back</string>
    <string name="article_title">Artikel</string>
    <string name="search_hint">Enter keyword...</string>
    <string name="no_results_found">Artikel tidak ditemukan</string>
    <string name="kuisioner_title">Cek Kesehatan Mental</string>
    <string name="mulai_kuisioner">Mulai Kuisioner</string>
    <string name="therapy_title">Daily Therapy</string>
    <string name="save_changes">Save</string>
    <string name="female">Female\n</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="profile_image">profile image</string>
    <string name="profile_saved">profile saved</string>
    <string name="logout_button_desc">Logout</string>
    <string name="result">Result</string>
    <string name="history">History</string>

</resources>