<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.soulsync.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_music_relax"
        android:name="com.dicoding.soulsync.ui.musicrelax.MusicRelaxFragment"
        android:label="@string/title_music_relax"
        tools:layout="@layout/fragment_music_relax" />

    <fragment
        android:id="@+id/navigation_daily_therapy"
        android:name="com.dicoding.soulsync.ui.dailytherapy.DailyTherapyFragment"
        android:label="@string/title_daily_therapy"
        tools:layout="@layout/fragment_daily_therapy" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dicoding.soulsync.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>