<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/appImageView"
        android:layout_width="500dp"
        android:layout_height="400dp"
        android:src="@drawable/splash" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/selamat_datang"
        android:textSize="18sp"
        android:textColor="?attr/android:textColorPrimary"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/descriptionwelcomeTextView"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="?attr/android:textColorPrimary"
        android:text="@string/deskripsi_selamat_datang"
        android:textSize="18sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/pink"
        android:text="@string/mulai"
        android:textColor="@color/white"
        app:cornerRadius="10dp" />
</LinearLayout>
