<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pinkmuda">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/pinkmuda"
        android:paddingHorizontal="16dp">

        <!-- Tombol kembali -->
        <ImageView
            android:id="@+id/btnBack2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back"
            android:contentDescription="@string/back_button_desc"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:focusable="true" />

        <!-- Judul -->
        <TextView
            android:id="@+id/tvKuisioner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/kuisioner_title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- CardView untuk konten -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/header"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="-80dp"
        android:layout_marginHorizontal="0dp"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="30dp"
        android:background="@color/white"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="25dp">

            <!-- ProgressBar di tengah -->
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

            <!-- Tombol Mulai Kuisioner di tengah -->
            <Button
                android:id="@+id/startKuisioner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mulai_kuisioner"
                android:layout_centerHorizontal="true"
                app:cornerRadius="8dp"
                android:layout_marginTop="3dp" />


            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/history"
                android:textColor="?attr/android:textColorPrimary"
                android:layout_below="@id/startKuisioner"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="25dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvHistory"
                android:layout_marginTop="16dp"
                android:visibility="visible" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
